Fix: flickering when one verse is selected solved.

--- a/client/main.css
+++ b/client/main.css
@@ -717,7 +717,7 @@ iframe {
 }
 
 div.container-fluid.body {
-  min-height: 800px;
+  min-height: 900px;
 }
 
 .Help {
